# career-assistant

./: .env.example  .gitignore  CLAUDE.md  LAST_SESSION.md  LICENSE  PLAN_INSTRUCTIONS.txt  README.md  pyproject.toml
backend/: config.py  main.py
backend/agent/: checkpoint.py  graph.py  graph_advisor.py  graph_evaluator.py  graph_interview.py  interrupts.py  runner.py  state.py
backend/api/: routes.py  uploads.py  ws.py
backend/config/: settings.json
backend/data/: assistant.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal
backend/llm/: prompts.py  schemas.py  service.py  translate.py
backend/observability/: callbacks.py  event_bus.py  otel.py
backend/storage/: applications.py  coaching_insights.py  db.py  journeys.py  playbook.py  profiles.py  sessions.py  stats.py  suggestions.py  traces.py
backend/tests/: conftest.py  test_cl_loop.py  test_cl_review.py  test_collect_job.py  test_cv_intake_order.py  test_evaluator.py  test_exporters.py  test_hm_feedback.py  test_interrupt_resume_integration.py  test_journey_milestone_writes.py  test_journeys_storage.py  test_known_tasks.py  test_language_switch.py  test_mock_interview_split.py  test_pricing.py  test_prompts_resolve.py  test_select_journey.py  test_select_journey_integration.py  test_settings_persistence.py  test_transcription_progress.py  test_v2_prompts.py  test_voice_prompt.py
docs/: ARCHITECTURE.md  Job Applications - Template.xlsx  SETUP.md  adding-models.md  llm-models.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
tests/: conftest.py
(+113 files in other folders)
