[project]
name = "assistant"
version = "0.3.0"
description = "Personal Application Assistant — agentic, conversational cover letter + Q&A helper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "aiosqlite>=0.20",
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=2.0",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp>=1.28",
    "openinference-instrumentation-langchain>=0.1.29",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pypdf>=5.1",
    "weasyprint>=63",
    "gspread>=6.1",
    "google-auth>=2.36",
    "tavily-python>=0.5",
    "markdown>=3.10.2",
    "faster-whisper>=1.2.1",
    "playwright>=1.61.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
